--- a/src/partials/about-complex.html
+++ b/src/partials/about-complex.html
@@ -77,7 +77,7 @@
             />
           </div>
           <div class="text-review">
-            <p class="title-review">Maria</p>
+            <p class="title-review">Maria!</p>
             <p class="rating">give rating 4.5</p>
           </div>
         </div>
